Build circle-'pixel' based POC

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<h1>{{title}}</h1>
+
+<h2>Visualize Random Number Sequences To Detect Anomalies</h2>
+
+<div #canvas class="example_div">
+</div>
