--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,43 @@
-<h1 style="display: inline-block">{{title}} :</h1>
-<h2 style="display: inline-block">Visualize Random Number Sequences To Detect Anomalies</h2>
+<div class="container">
+  <h1 style="display: inline-block">{{title}} :</h1>
+  <h2 style="display: inline-block">Visualize Random Number Sequences To Detect Anomalies</h2>
 
-<div class="row">
-  <span class="col-md-2">
-    <label for="radScale">Pixel Size</label>
-    <input class="form-control" id="radScale" [(ngModel)]="radScale">
-  </span>
+  <div class="row">
+    <p class="col-md-2">
+      <label for="virtualPixelSize">Pixel Size</label>
+      <input class="form-control number" type="number" min="1" id="virtualPixelSize" [(ngModel)]="canvasCalculator.virtualPixelSize">
+    </p>
 
-  <span class="col-md-2">
-    <label for="desiredCanvasWidth">W</label>
-    <input class="form-control" id="desiredCanvasWidth" [(ngModel)]="desiredCanvasWidth">
-  </span>
+    <p class="col-md-2">
+      <label for="desiredCanvasWidthPx">W</label>
+      <input class="form-control number" type="number" min="1" id="desiredCanvasWidthPx" [(ngModel)]="canvasCalculator.desiredCanvasWidthPx">
+    </p>
 
-  <span class="col-md-2">
-    <label for="desiredCanvasHeight">H</label>
-    <input class="form-control" id="desiredCanvasHeight" [(ngModel)]="desiredCanvasHeight">
-  </span>
+    <p class="col-md-2">
+      <label for="desiredCanvasHeightPx">H</label>
+      <input class="form-control number" type="number" min="1" id="desiredCanvasHeightPx" [(ngModel)]="canvasCalculator.desiredCanvasHeightPx">
+    </p>
 
-  <span class="col-md-4">
-    <button class="btn btn-primary btn-lg" (click)="recalculate()">Recalculate</button>
+    <p class="col-md-4">
+      <button class="btn btn-primary btn-lg" (click)="recalculate()" [disabled]="busy">Recalculate</button>
+      <label class="btn btn-primary btn-lg btn-file">From File <input type="file" hidden (change)="fileChange($event)" accept=".txt,.rnd" [disabled]="busy"></label>
+    </p>
+  </div>
 
-    <label class="btn btn-primary btn-lg btn-file">Browse <input type="file" hidden (change)="fileChange($event)" accept=".txt,.rnd"></label>
-  </span>
-</div>
-
-<div>
-  Data items dimensions: {{ nFitHoriz }}x{{ nFitVert }}
-</div>
-<div>
-  Actual canvas size: {{ actualCanvasWidth }}x{{ actualCanvasHeight }}
-</div>
-<div>
-  Total items count: {{ total }}
-</div>
-
-<div #canvas class="example_div">
+  <div class="row">
+    <div class="col-md-8">
+      <div #canvas class="example_div"></div>
+    </div>
+    <div class="col-md-4">
+      <p>
+        Actual Dimension (Virtual Pixels): {{ totalVirtualPixelHorizontalCount }}x{{ totalVirtualPixelVerticalCount }}
+      </p>
+      <p>
+        Actual Dimension (Device Pixels): {{ actualCanvasWidthPx }}x{{ actualCanvasHeightPx }}
+      </p>
+      <p>
+        Virtual Pixel Count: {{ virtualPixelTotalCount }}
+      </p>
+    </div>
+  </div>
 </div>
